--- a/app/src/jsMain/resources/bpe.css
+++ b/app/src/jsMain/resources/bpe.css
@@ -1,4 +1,327 @@
-/* https://www.materialpalette.com/colors */
+:root {
+    /* Material */
+
+    --material-black: #000;
+    --material-white: #fff;
+
+    --material-red--50: #ffebee;
+    --material-red--100: #ffcdd2;
+    --material-red--200: #ef9a9a;
+    --material-red--300: #e57373;
+    --material-red--400: #ef5350;
+    --material-red--500: #f44336;
+    --material-red--600: #e53935;
+    --material-red--700: #d32f2f;
+    --material-red--800: #c62828;
+    --material-red--900: #b71c1c;
+    --material-red--a100: #ff8a80;
+    --material-red--a200: #ff5252;
+    --material-red--a400: #ff1744;
+    --material-red--a700: #d50000;
+
+    --material-pink--50: #fce4ec;
+    --material-pink--100: #f8bbd0;
+    --material-pink--200: #f48fb1;
+    --material-pink--300: #f06292;
+    --material-pink--400: #ec407a;
+    --material-pink--500: #e91e63;
+    --material-pink--600: #d81b60;
+    --material-pink--700: #c2185b;
+    --material-pink--800: #ad1457;
+    --material-pink--900: #880e4f;
+    --material-pink--a100: #ff80ab;
+    --material-pink--a200: #ff4081;
+    --material-pink--a400: #f50057;
+    --material-pink--a700: #c51162;
+
+    --material-purple--50: #f3e5f5;
+    --material-purple--100: #e1bee7;
+    --material-purple--200: #ce93d8;
+    --material-purple--300: #ba68c8;
+    --material-purple--400: #ab47bc;
+    --material-purple--500: #9c27b0;
+    --material-purple--600: #8e24aa;
+    --material-purple--700: #7b1fa2;
+    --material-purple--800: #6a1b9a;
+    --material-purple--900: #4a148c;
+    --material-purple--a100: #ea80fc;
+    --material-purple--a200: #e040fb;
+    --material-purple--a400: #d500f9;
+    --material-purple--a700: #a0f;
+
+    --material-deep-purple--50: #ede7f6;
+    --material-deep-purple--100: #d1c4e9;
+    --material-deep-purple--200: #b39ddb;
+    --material-deep-purple--300: #9575cd;
+    --material-deep-purple--400: #7e57c2;
+    --material-deep-purple--500: #673ab7;
+    --material-deep-purple--600: #5e35b1;
+    --material-deep-purple--700: #512da8;
+    --material-deep-purple--800: #4527a0;
+    --material-deep-purple--900: #311b92;
+    --material-deep-purple--a100: #b388ff;
+    --material-deep-purple--a200: #7c4dff;
+    --material-deep-purple--a400: #651fff;
+    --material-deep-purple--a700: #6200ea;
+
+    --material-indigo--50: #e8eaf6;
+    --material-indigo--100: #c5cae9;
+    --material-indigo--200: #9fa8da;
+    --material-indigo--300: #7986cb;
+    --material-indigo--400: #5c6bc0;
+    --material-indigo--500: #3f51b5;
+    --material-indigo--600: #3949ab;
+    --material-indigo--700: #303f9f;
+    --material-indigo--800: #283593;
+    --material-indigo--900: #1a237e;
+    --material-indigo--a100: #8c9eff;
+    --material-indigo--a200: #536dfe;
+    --material-indigo--a400: #3d5afe;
+    --material-indigo--a700: #304ffe;
+
+    --material-blue--50: #e3f2fd;
+    --material-blue--100: #bbdefb;
+    --material-blue--200: #90caf9;
+    --material-blue--300: #64b5f6;
+    --material-blue--400: #42a5f5;
+    --material-blue--500: #2196f3;
+    --material-blue--600: #1e88e5;
+    --material-blue--700: #1976d2;
+    --material-blue--800: #1565c0;
+    --material-blue--900: #0d47a1;
+    --material-blue--a100: #82b1ff;
+    --material-blue--a200: #448aff;
+    --material-blue--a400: #2979ff;
+    --material-blue--a700: #2962ff;
+
+    --material-light-blue--50: #e1f5fe;
+    --material-light-blue--100: #b3e5fc;
+    --material-light-blue--200: #81d4fa;
+    --material-light-blue--300: #4fc3f7;
+    --material-light-blue--400: #29b6f6;
+    --material-light-blue--500: #03a9f4;
+    --material-light-blue--600: #039be5;
+    --material-light-blue--700: #0288d1;
+    --material-light-blue--800: #0277bd;
+    --material-light-blue--900: #01579b;
+    --material-light-blue--a100: #80d8ff;
+    --material-light-blue--a200: #40c4ff;
+    --material-light-blue--a400: #00b0ff;
+    --material-light-blue--a700: #0091ea;
+
+    --material-cyan--50: #e0f7fa;
+    --material-cyan--100: #b2ebf2;
+    --material-cyan--200: #80deea;
+    --material-cyan--300: #4dd0e1;
+    --material-cyan--400: #26c6da;
+    --material-cyan--500: #00bcd4;
+    --material-cyan--600: #00acc1;
+    --material-cyan--700: #0097a7;
+    --material-cyan--800: #00838f;
+    --material-cyan--900: #006064;
+    --material-cyan--a100: #84ffff;
+    --material-cyan--a200: #18ffff;
+    --material-cyan--a400: #00e5ff;
+    --material-cyan--a700: #00b8d4;
+
+    --material-teal--50: #e0f2f1;
+    --material-teal--100: #b2dfdb;
+    --material-teal--200: #80cbc4;
+    --material-teal--300: #4db6ac;
+    --material-teal--400: #26a69a;
+    --material-teal--500: #009688;
+    --material-teal--600: #00897b;
+    --material-teal--700: #00796b;
+    --material-teal--800: #00695c;
+    --material-teal--900: #004d40;
+    --material-teal--a100: #a7ffeb;
+    --material-teal--a200: #64ffda;
+    --material-teal--a400: #1de9b6;
+    --material-teal--a700: #00bfa5;
+
+    --material-green--50: #e8f5e9;
+    --material-green--100: #c8e6c9;
+    --material-green--200: #a5d6a7;
+    --material-green--300: #81c784;
+    --material-green--400: #66bb6a;
+    --material-green--500: #4caf50;
+    --material-green--600: #43a047;
+    --material-green--700: #388e3c;
+    --material-green--800: #2e7d32;
+    --material-green--900: #1b5e20;
+    --material-green--a100: #b9f6ca;
+    --material-green--a200: #69f0ae;
+    --material-green--a400: #00e676;
+    --material-green--a700: #00c853;
+
+    --material-light-green--50: #f1f8e9;
+    --material-light-green--100: #dcedc8;
+    --material-light-green--200: #c5e1a5;
+    --material-light-green--300: #aed581;
+    --material-light-green--400: #9ccc65;
+    --material-light-green--500: #8bc34a;
+    --material-light-green--600: #7cb342;
+    --material-light-green--700: #689f38;
+    --material-light-green--800: #558b2f;
+    --material-light-green--900: #33691e;
+    --material-light-green--a100: #ccff90;
+    --material-light-green--a200: #b2ff59;
+    --material-light-green--a400: #76ff03;
+    --material-light-green--a700: #64dd17;
+
+    --material-lime--50: #f9fbe7;
+    --material-lime--100: #f0f4c3;
+    --material-lime--200: #e6ee9c;
+    --material-lime--300: #dce775;
+    --material-lime--400: #d4e157;
+    --material-lime--500: #cddc39;
+    --material-lime--600: #c0ca33;
+    --material-lime--700: #afb42b;
+    --material-lime--800: #9e9d24;
+    --material-lime--900: #827717;
+    --material-lime--a100: #f4ff81;
+    --material-lime--a200: #eeff41;
+    --material-lime--a400: #c6ff00;
+    --material-lime--a700: #aeea00;
+
+    --material-yellow--50: #fffde7;
+    --material-yellow--100: #fff9c4;
+    --material-yellow--200: #fff59d;
+    --material-yellow--300: #fff176;
+    --material-yellow--400: #ffee58;
+    --material-yellow--500: #ffeb3b;
+    --material-yellow--600: #fdd835;
+    --material-yellow--700: #fbc02d;
+    --material-yellow--800: #f9a825;
+    --material-yellow--900: #f57f17;
+    --material-yellow--a100: #ffff8d;
+    --material-yellow--a200: #ff0;
+    --material-yellow--a400: #ffea00;
+    --material-yellow--a700: #ffd600;
+
+    --material-amber--50: #fff8e1;
+    --material-amber--100: #ffecb3;
+    --material-amber--200: #ffe082;
+    --material-amber--300: #ffd54f;
+    --material-amber--400: #ffca28;
+    --material-amber--500: #ffc107;
+    --material-amber--600: #ffb300;
+    --material-amber--700: #ffa000;
+    --material-amber--800: #ff8f00;
+    --material-amber--900: #ff6f00;
+    --material-amber--a100: #ffe57f;
+    --material-amber--a200: #ffd740;
+    --material-amber--a400: #ffc400;
+    --material-amber--a700: #ffab00;
+
+    --material-orange--50: #fff3e0;
+    --material-orange--100: #ffe0b2;
+    --material-orange--200: #ffcc80;
+    --material-orange--300: #ffb74d;
+    --material-orange--400: #ffa726;
+    --material-orange--500: #ff9800;
+    --material-orange--600: #fb8c00;
+    --material-orange--700: #f57c00;
+    --material-orange--800: #ef6c00;
+    --material-orange--900: #e65100;
+    --material-orange--a100: #ffd180;
+    --material-orange--a200: #ffab40;
+    --material-orange--a400: #ff9100;
+    --material-orange--a700: #ff6d00;
+
+    --material-deep-orange--50: #fbe9e7;
+    --material-deep-orange--100: #ffccbc;
+    --material-deep-orange--200: #ffab91;
+    --material-deep-orange--300: #ff8a65;
+    --material-deep-orange--400: #ff7043;
+    --material-deep-orange--500: #ff5722;
+    --material-deep-orange--600: #f4511e;
+    --material-deep-orange--700: #e64a19;
+    --material-deep-orange--800: #d84315;
+    --material-deep-orange--900: #bf360c;
+    --material-deep-orange--a100: #ff9e80;
+    --material-deep-orange--a200: #ff6e40;
+    --material-deep-orange--a400: #ff3d00;
+    --material-deep-orange--a700: #dd2c00;
+
+    --material-brown--50: #efebe9;
+    --material-brown--100: #d7ccc8;
+    --material-brown--200: #bcaaa4;
+    --material-brown--300: #a1887f;
+    --material-brown--400: #8d6e63;
+    --material-brown--500: #795548;
+    --material-brown--600: #6d4c41;
+    --material-brown--700: #5d4037;
+    --material-brown--800: #4e342e;
+    --material-brown--900: #3e2723;
+
+    --material-gray--50: #fafafa;
+    --material-gray--100: #f5f5f5;
+    --material-gray--200: #eee;
+    --material-gray--300: #e0e0e0;
+    --material-gray--400: #bdbdbd;
+    --material-gray--500: #9e9e9e;
+    --material-gray--600: #757575;
+    --material-gray--700: #616161;
+    --material-gray--800: #424242;
+    --material-gray--900: #212121;
+
+    --material-blue-gray--50: #eceff1;
+    --material-blue-gray--100: #cfd8dc;
+    --material-blue-gray--200: #b0bec5;
+    --material-blue-gray--300: #90a4ae;
+    --material-blue-gray--400: #78909c;
+    --material-blue-gray--500: #607d8b;
+    --material-blue-gray--600: #546e7a;
+    --material-blue-gray--700: #455a64;
+    --material-blue-gray--800: #37474f;
+    --material-blue-gray--900: #263238;
+
+    --material-red: var(--material-red--500);
+    --material-pink: var(--material-pink--500);
+    --material-purple: var(--material-purple--500);
+    --material-deep-purple: var(--material-deep-purple--500);
+    --material-indigo: var(--material-indigo--500);
+    --material-blue: var(--material-blue--500);
+    --material-light-blue: var(--material-light-blue--500);
+    --material-cyan: var(--material-cyan--500);
+    --material-teal: var(--material-teal--500);
+    --material-green: var(--material-green--500);
+    --material-light-green: var(--material-light-green--500);
+    --material-lime: var(--material-lime--500);
+    --material-yellow: var(--material-yellow--500);
+    --material-amber: var(--material-amber--500);
+    --material-orange: var(--material-orange--500);
+    --material-deep-orange: var(--material-deep-orange--500);
+    --material-brown: var(--material-brown--500);
+    --material-gray: var(--gray--500);
+    --material-blue-gray: var(--blue-gray--500);
+
+    /* BPE */
+
+    --spec--0: #000000;
+    --spec--1: #0000c0;
+    --spec--2: #c00000;
+    --spec--3: #c000c0;
+    --spec--4: #00c000;
+    --spec--5: #00c0c0;
+    --spec--6: #c0c000;
+    --spec--7: #c0c0c0;
+
+    --tool-size: 48px;
+    --tool-offset: calc(var(--tool-size) / 12);
+    --tool-inner-size: calc((var(--tool-size) - var(--tool-offset) * 2) / 2);
+
+    --panel-background: var(--material-brown--900);
+    --panel-divider: var(--material-brown--600);
+    --panel-divider-size: 4px;
+    --panel-active: var(--material-red--500);
+    --panel-light-on: var(--panel-active);
+    --panel-light-off: var(--material-black);
+    --panel-transparent: var(--material-gray--600);
+    --panel-focus: var(--material-red--500);
+    --panel-focus-opacity: 0.5;
+}
 
 body {
     margin: 0;
@@ -17,7 +340,8 @@ body {
 .panel {
     display: flex;
     justify-content: space-between;
-    min-height: 48px;
+    min-height: var(--tool-size);
+    background: var(--panel-background);
 }
 
 .panel--palette {
@@ -25,7 +349,7 @@ body {
     top: 0;
     right: 0;
     left: 0;
-    border-bottom: 2px solid #607d8b;
+    border-bottom: var(--panel-divider-size) solid var(--panel-divider);
 }
 
 .panel--toolbox {
@@ -33,7 +357,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    border-top: 2px solid #607d8b;
+    border-top: var(--panel-divider-size) solid var(--panel-divider);
 }
 
 .panel__pane {
@@ -44,65 +368,177 @@ body {
 .tool {
     display: block;
     position: relative;
+    cursor: pointer;
+    width: var(--tool-size);
+    height: var(--tool-size);
+    outline: none !important;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+}
+
+.tool:active:after {
+    display: block;
+    position: absolute;
+    content: " ";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: var(--panel-focus);
+    opacity: var(--panel-focus-opacity);
 }
 
 .tool--active {
-    background: #37474f;
+    background: var(--panel-active);
 }
 
-.tool--selected {
-    background: #607d8b;
+.tool__light {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--tool-size);
+    height: var(--tool-size);
+    box-sizing: border-box;
+    border: var(--tool-offset) solid var(--panel-background);
 }
 
-.tool--md {
-    width: 48px;
-    height: 48px;
+.tool__light--on {
+    background: var(--panel-light-on);
+}
+
+.tool__light--off {
+    background: var(--panel-light-off);
 }
 
 .tool__icon {
     position: absolute;
     top: 0;
     left: 0;
-}
-
-.tool__icon--md {
-    width: 48px;
-    height: 48px;
-}
-
-.tool__ink {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 16px;
-    left: 16px;
-}
-
-.tool__paper {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: 4px;
-    left: 4px;
-    border-top: 10px solid;
-    border-right: 10px solid;
-    border-bottom: 10px solid;
-    border-left: 10px solid;
+    width: var(--tool-size);
+    height: var(--tool-size);
 }
 
 .tool__color {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 4px;
-    left: 4px;
+    top: var(--tool-offset);
+    right: var(--tool-offset);
+    bottom: var(--tool-offset);
+    left: var(--tool-offset);
+}
+
+.tool__color_ink {
+    --offset: calc((var(--tool-size) - var(--tool-inner-size)) / 2);
+
+    position: absolute;
+    top: var(--offset);
+    left: var(--offset);
+    width: var(--tool-inner-size);
+    height: var(--tool-inner-size);
+}
+
+.tool__color_paper {
+    box-sizing: border-box;
+    position: absolute;
+    top: var(--tool-offset);
+    right: var(--tool-offset);
+    bottom: var(--tool-offset);
+    left: var(--tool-offset);
+}
+
+.tool__color_paper:after {
+    --offset: calc((var(--tool-size) - var(--tool-inner-size)) / 2 - var(--tool-offset));
+
+    content: " ";
+    display: block;
+    position: absolute;
+    top: var(--offset);
+    left: var(--offset);
+    width: var(--tool-inner-size);
+    height: var(--tool-inner-size);
+    overflow: hidden;
+    background: var(--panel-background);
+}
+
+.tool__color_ink--transparent {
+    --half-size: calc(var(--tool-inner-size) / 2);
+
+    background-image: linear-gradient(45deg, var(--panel-transparent) 25%, transparent 25%),
+        linear-gradient(-45deg, var(--panel-transparent) 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, var(--panel-transparent) 75%),
+        linear-gradient(-45deg, transparent 75%, var(--panel-transparent) 75%);
+
+    background-size: var(--tool-inner-size) var(--tool-inner-size);
+    background-position: 0 var(--half-size), 0 0, var(--half-size) 0, calc(var(--half-size) * -1) var(--half-size);
+}
+
+.tool__color--transparent,
+.tool__color_paper--transparent,
+.tool__light--transparent {
+    --size: calc(var(--tool-size) / 2 - var(--tool-offset));
+    --half-size: calc(var(--size) / 2);
+
+    background-image: linear-gradient(45deg, var(--panel-transparent) 25%, transparent 25%),
+        linear-gradient(-45deg, var(--panel-transparent) 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, var(--panel-transparent) 75%),
+        linear-gradient(-45deg, transparent 75%, var(--panel-transparent) 75%);
+
+    background-size: var(--size) var(--size);
+    background-position: 0 var(--half-size), 0 0, var(--half-size) 0, calc(var(--half-size) * -1) var(--half-size);
+}
+
+.tool__color--0,
+.tool__color_ink--0,
+.tool__color_paper--0 {
+    background: var(--spec--0);
+}
+
+.tool__color--1,
+.tool__color_ink--1,
+.tool__color_paper--1 {
+    background: var(--spec--1);
+}
+
+.tool__color--2,
+.tool__color_ink--2,
+.tool__color_paper--2 {
+    background: var(--spec--2);
+}
+
+.tool__color--3,
+.tool__color_ink--3,
+.tool__color_paper--3 {
+    background: var(--spec--3);
+}
+
+.tool__color--4,
+.tool__color_ink--4,
+.tool__color_paper--4 {
+    background: var(--spec--4);
+}
+
+.tool__color--5,
+.tool__color_ink--5,
+.tool__color_paper--5 {
+    background: var(--spec--5);
+}
+
+.tool__color--6,
+.tool__color_ink--6,
+.tool__color_paper--6 {
+    background: var(--spec--6);
+}
+
+.tool__color--7,
+.tool__color_ink--7,
+.tool__color_paper--7 {
+    background: var(--spec--7);
 }
 
 @media screen and (orientation: landscape) {
     .panel {
         flex-direction: column;
         min-height: auto;
-        min-width: 48px;
+        min-width: var(--tool-size);
     }
 
     .panel__pane {
@@ -113,17 +549,16 @@ body {
         top: 0;
         right: auto;
         bottom: 0;
-        left: 0;
-        border-right: 2px solid #607d8b;
+        left: var(--tool-size);
+        border-right: var(--panel-divider-size) solid var(--panel-divider);
         border-bottom: 0 none;
     }
 
     .panel--toolbox {
         top: 0;
-        right: 0;
+        right: auto;
         bottom: 0;
-        left: auto;
+        left: 0;
         border-top: 0 none;
-        border-left: 2px solid #607d8b;
     }
 }
