--- a/app/src/jsMain/resources/style/bpe.css
+++ b/app/src/jsMain/resources/style/bpe.css
@@ -15,6 +15,8 @@
     --tool-char-size: 24px;
     --panel-divider-size: 4px;
 
+    --loading: var(--material-red--500);
+
     --panel-background: var(--material-brown--900);
     --panel-divider: var(--material-brown--700);
     --panel-active: var(--material-brown--600);
@@ -45,6 +47,47 @@ body {
     margin: 0;
     padding: 0;
     background: #000000;
+}
+
+.loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--loading);
+}
+
+.loading,
+.loading:after {
+    box-sizing: border-box;
+}
+
+.loading {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+.loading:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6.4px solid currentColor;
+    border-color: currentColor transparent currentColor transparent;
+    animation: loading 1.2s linear infinite;
+}
+
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .container {
