Render areas (cursor and selection)

--- a/app/src/jsMain/resources/style/bpe.css
+++ b/app/src/jsMain/resources/style/bpe.css
@@ -579,8 +579,12 @@ body {
     left: var(--sheet-offset);
 }
 
-.drawing__sheet {
+.drawing__sheet,
+.drawing__areas {
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: contain;
